# dbuzzy-tui

./: Cargo.toml  LICENSE  README.md
dbuzzy/: Cargo.toml
dbuzzy/src/: app.rs  config.rs  lib.rs  main.rs
dbuzzy/src/db/: config.rs  conn.rs  connection.rs  mod.rs  queries.rs  tree.rs  types.rs
dbuzzy/src/widgets/: conn_list.rs  connections.rs  databases.rs  db_tree.rs  mod.rs
dbuzzy/tests/: integration_test.rs
dbuzzy/tests/db/: mod.rs
duzzy/: Cargo.toml
duzzy-db/: Cargo.toml
duzzy-db/src/: config.rs  connection.rs  lib.rs
duzzy-editor/: Cargo.toml
duzzy-editor/src/: buffer.rs  clipboard.rs  document.rs  editor.rs  event.rs  highlight.rs  history.rs  input.rs  keymap.rs  lib.rs  macros.rs  renderer.rs  search.rs  selection.rs  transaction.rs  widget.rs
duzzy-editor/src/command/: adjustment.rs  clip.rs  edit.rs  history.rs  input.rs  insert.rs  insert_mode.rs  mod.rs  modify.rs  motion.rs  movement.rs  revert.rs  search.rs  select.rs  shift.rs  switch.rs  switch_mode.rs
duzzy-lib/: Cargo.toml
duzzy-lib/derive/: Cargo.toml
duzzy-lib/derive/src/: lib.rs
duzzy-lib/src/: colors.rs  event.rs  lib.rs  utils.rs
duzzy/src/: app.rs  main.rs
editor/: Cargo.toml
editor/src/: buffer.rs  cursor.rs  document.rs  editor.rs  history.rs  keymap.rs  lib.rs  logger.rs  macros.rs  renderer.rs  widget.rs  workspace.rs
editor/src/client/: mod.rs  widget.rs
editor/src/command/: control.rs  edit.rs  insert.rs  mod.rs  movement.rs  shift.rs  switch.rs  transform.rs
editor/src/commands/: mod.rs
editor/src/core/: input.rs  mod.rs
editor/src/core/command/: movement.rs  transform.rs
editor/src/keymap/: mod.rs
src/: app.rs  buffer.rs  command.rs  cursor.rs  editor.rs  event.rs  input.rs  keymap.rs  lib.rs  main.rs  mode.rs  widget.rs
src/client/: widget.rs
src/command/: mod.rs  movement.rs  transform.rs
src/editor/: buffer.rs  mod.rs
src/editor/command/: mod.rs  movement.rs  transform.rs
src/editor/keymap/: mod.rs
src/keymap/: default  default.yml  mod.rs
