[workspace]
members = [
  "editor",
  "duzzy",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Nikita S"]

[workspace.dependencies]
log = "0.4.21"
anyhow = "1.0.70"

tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros", "sync"] }

ratatui = "0.26.1"
crossterm = { version = "0.26.1", features = ["event-stream"] }

