[workspace]
members = [
  "duzzy-lib",
  "duzzy-editor",
  "dbuzzy", 
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Nikita S"]

[workspace.dependencies]
anyhow = "1.0.70"
thiserror = "1.0.61"

tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros", "sync", "time"] }

ratatui = "0.26.1"
crossterm = { version = "0.26.1", features = ["event-stream"] }
