[package]
name = "dbuzzy"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
ratatui.workspace = true
crossterm.workspace = true

futures-util = "0.3.30"

deadpool-postgres = "0.14.0"
tokio-postgres = { version = "0.7.10", features = ["with-serde_json-1"] }

toml = "0.8.14"
serde = { version = "1.0.203", features = ["derive"] }

duzzy-lib = { path = "../duzzy-lib" }
duzzy-editor = { path = "../duzzy-editor" }
serde_json = "1.0.118"

[dev-dependencies]
testcontainers = "0.19.0"
