[package]
name = "duzzy-editor"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
log.workspace = true
anyhow.workspace = true
tokio.workspace = true
ratatui.workspace = true
crossterm.workspace = true

regex = "1.9.3"
ropey = "1.6.1"
arboard = "3.3.2"
once_cell = "1.19.0"
smartstring = "1.0.1"
