[package]
name = "duzzy-lib"
version.workspace = true
edition.workspace = true
authors.workspace = true

[features]
default = []
derive = ["duzzy-lib-derive"]

[dependencies]
anyhow.workspace = true
ratatui.workspace = true
crossterm.workspace = true

toml = "0.8.14"
serde = { version = "1.0.203", features = ["derive"] }

duzzy-lib-derive = { path = "derive", optional = true }
